snapshot firmware example
